# kayo-old

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  botcontext.py  docker-compose.yml  kayo.py  kayo_lib.py  main.py  model.py  pyproject.toml  referential.json  requirements.txt
.github/workflows/: docker_build_test.yml  docker_publish.yml  pre-commit.yml
kayo/: __init__.py  alert.py  league.py  lib.py  match.py  model.py  team.py
